--- a/mods/ts/weapons/energyweapons.yaml
+++ b/mods/ts/weapons/energyweapons.yaml
@@ -124,7 +124,7 @@ SonicWave:
 	ValidTargets: Ground, Trees, Water
 	ReloadDelay: 75
 	Range: 6c512
-	Report: sonic4.aud
+	StartBurstReport: sonic4.aud
 	Burst: 20
 	BurstDelays: 2
 	Projectile: BlastWave
