--- a/mods/ts/rules/husks.yaml
+++ b/mods/ts/rules/husks.yaml
@@ -5,7 +5,8 @@ DSHP.Husk:
 	Aircraft:
 		TurnSpeed: 20
 		Speed: 168
-	-RenderSprites:
+	RenderSprites:
+		Image: dshp
 	RenderModels:
 		Image: dshp
 
